# jojo-wango-library

./: .gitignore  BACKLOG.txt  CONTRIBUTING.md  README.md  django_dump.sql  docker-compose.yml  makefile  pyproject.toml
app/: asgi.py  settings.py  urls.py  views.py  wsgi.py
books/: admin.py  forms.py  models.py  urls.py  views.py
books/migrations/: 0001_initial.py  0002_genre_alter_book_collection_book_genres.py  0003_remove_book_cover.py
borrows/: apps.py  models.py
borrows/migrations/: 0001_initial.py
forums/: forms.py  models.py  urls.py  views.py
forums/migrations/: 0001_initial.py
libraries/: admin.py  forms.py  models.py  urls.py  views.py
libraries/migrations/: 0001_initial.py
reading_groups/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
reading_groups/migrations/: 0001_initial.py  0002_readinggrouphasuser_user.py
templates/: base.html  index.html
templates/books/: addBook.html  addGenre.html  index_books.html  index_genres.html
templates/components/navbar/: disconnectedNavbar.html  navbar.html
templates/components/sidebar/: librarianSidebar.html
templates/forums/: index.html
templates/libraries/: addLibrary.html  index.html
templates/reading_groups/: addReadingGroup.html  index.html
templates/registration/: login.html  register.html  reset_password.html
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_profile_delete_userprofile.py  0003_alter_profile_role.py
