[tool.poetry]
name = "jojo-wango-library"
version = "0.1.0"
description = ""
authors = ["Adel Sen <adelsenhadjii@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.2"
psycopg2-binary = "^2.9.5"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
pyright = "^1.1.275"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
